# QuantCraft

./: .gitignore  CMakeLists.txt  README.md  drogon_config.json
.devcontainer/: Dockerfile  devcontainer.json
src/: Stock.cpp  Stock.h  fetch_stock.cpp  local_test.cpp  main.cpp  test_http.cpp
src/api/: StockController.cpp  StockController.h
src/backtest/: Backtester.cpp  Backtester.h
src/core/: Backtester.cpp  Candlestick.cpp  Candlestick.h  Indicators.cpp  Indicators.h  Stock.cpp  Stock.h  Strategy.h  Trade.h
src/io/: JsonParser.cpp  JsonParser.h  fetch_stock.cpp
src/services/: StockService.cpp  StockService.h
src/strategy/: DoubleLineCrossover.cpp  DoubleLineCrossover.h  SimpleStrategy.cpp  SimpleStrategy.h
src/viz/: draw_candlestick.cpp  test_plot.cpp
